--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -26,6 +26,8 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   CONFIG_FILE: .config
+  CONFIG_FILE1: mt7621.mk
+  CONFIG_FILE2: mt7621_phicomm_k2p.dts
   DIY_SH: diy.sh
   SSH_ACTIONS: true
   UPLOAD_BIN_DIR: false
@@ -68,6 +70,8 @@ jobs:
       run: |
         [ -e files ] && mv files openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        [ -e $CONFIG_FILE1 ] && mv $CONFIG_FILE1 openwrt/target/linux/ramips/image/mt7621.mk 
+        [ -e $CONFIG_FILE2 ] && mv $CONFIG_FILE2 openwrt/target/linux/ramips/dts/mt7621_phicomm_k2p.dts
         chmod +x $DIY_SH
         cd openwrt
         ../$DIY_SH
